--- a/requirements.txt
+++ b/requirements.txt
@@ -35,4 +35,5 @@ marshmallow==3.20.1
 
 # Production Server
 gunicorn==21.2.0
-psycopg2-binary==2.9.9
+# PostgreSQL adapter - psycopg (v3) est plus compatible avec Python récents
+psycopg[binary]==3.1.18
