ajout pour integration google sheet

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@ build/
 .idea/
 DEPLOY_RENDER.md
 QUICK_DEPLOY.md
+IMAGES_GUIDE.md
+APP_SCRIPT_UPDATED.js
+EXAMPLE_USAGE.md
+GOOGLE_SHEETS_INTEGRATION.md
+TEST_NEW_ENDPOINT.md
