--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ CORS_ORIGINS=*
 # Rate Limiting (optionnel)
 RATELIMIT_ENABLED=false
 RATELIMIT_DEFAULT=100/hour
+
+# Cloudinary Configuration (Image Management)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
