--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,10 @@ alembic==1.14.0
 Werkzeug==3.0.1
 requests==2.31.0
 
+# Image Management
+cloudinary==1.41.0
+Pillow==10.4.0
+
 # Testing
 pytest==7.4.3
 pytest-flask==1.3.0
