refactor: replace Cloudinary with local image storage + Pillow compression

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ APP_SCRIPT_UPDATED.js
 EXAMPLE_USAGE.md
 GOOGLE_SHEETS_INTEGRATION.md
 TEST_NEW_ENDPOINT.md
+
+# Local image storage
+static/products/
+instance/
